--- a/src/scss/blocks/preview/_preview.scss
+++ b/src/scss/blocks/preview/_preview.scss
@@ -44,6 +44,7 @@
         line-height: 36px;
         color: rgba(0, 0, 0, 0.7);
     }
+    
 }
 .tabheader {
     width: 280px;
@@ -71,5 +72,23 @@
             font-size: 22px;
             font-weight: 700;
         }
+    }
+}
+.show {
+    display:block
+}
+.hide {
+    display:none
+}
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+@keyframes fade{
+    from {
+        opacity: 0.1;
+    } 
+    to {
+        opacity: 1;
     }
 }
